--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8">
+
+    <style>
+        a {
+            color: blue;
+        }
+    </style>
+
     <script src="/index.js" type="module" defer></script>
     <title>HttGit</title>
 </head>
